add client panel

--- a/template/default/client/change-password.html
+++ b/template/default/client/change-password.html
@@ -1,6 +1,6 @@
-<!--{include:admin/header.html}-->
+<!--{include:client/header.html}-->
 <div class="change-password container">
-	<!--{include:admin/block-flow-message.html}-->
+	<!--{include:client/block-flow-message.html}-->
 	<form action="${PHP_SELF}?action=change-password" method="post" id="submit-form">
 	<input type="hidden" name="option" id="option" value="update" />
 		<div class="form detail-form round-corner">
@@ -26,4 +26,4 @@
 		</div>
 	</form>
 </div>
-<!--{include:admin/footer.html}-->
+<!--{include:client/footer.html}-->
