add other informat in client panel (right content)

--- a/template/default/client/index-home.html
+++ b/template/default/client/index-home.html
@@ -26,5 +26,11 @@
 			<li class="text">{$info['cube']['total_product']}</li>
 		</ul>
 	</div>
+	
+	<div class="detail round-corner">
+		<h2 class="subject">Other Cube Information</h2>
+		<div class="description">{$info['cube']['description']}</div>
+		<div class="cover"><img src="{$info['cube']['cover']}" /></div>
+	</div>
 </div>
 <!--{include:client/footer.html}-->
