--- a/template/default/client/panel.html
+++ b/template/default/client/panel.html
@@ -5,7 +5,7 @@
 			<div class="detail round-corner">
 				<h2>Welcome</h2>
 				<div class="clear-fix">
-					<div class="user float-left">{$admin['username']}</div>
+					<div class="user float-left">{$client['username']}</div>
 					<div class="text-align-right">
 						<a href="${PHP_SELF}?action=home" target="content">
 							<img src="${SITE_URL}/static/image/admin/panel-home.png" width="12" height="12" class="tooltip" title="Panel Home" alt="Panel Home" />
