--- a/static/stylesheet/admin.css
+++ b/static/stylesheet/admin.css
@@ -50,6 +50,8 @@ h2.subject { font-size: 18px; font-weight: bold; margin-bottom: 10px; }
 .panel-home .detail ul li.label { float: left; width: 25%; }
 .panel-home .detail ul li.text { float: left; width: 25%; }
 .panel-home .detail .memo { width: 99.5%; height: 150px; border: 1px solid #000; padding: 5px; font-size: 14px; line-height: 20px; }
+.panel-home .detail .description { float: left; width: 70%; line-height: 20px; padding-right: 10px; }
+.panel-home .detail .cover { text-align: right; }
 
 /* Input Form */
 .form { background: #edeae7; border: 1px solid #afafaf; margin-top: 5px; }
