--- a/template/default/header.html
+++ b/template/default/header.html
@@ -34,7 +34,7 @@
 				<li><a href="index.php" class="item-1">Cubes</a></li>
 				<li><a href="product.php" class="item-2">Products</a></li>
 				<li><a href="random.php" class="item-3">Random</a></li>
-				<li><a href="hot.php" class="item-4">Hot!</a></li>
+				<li><a href="rent-cube.php" class="item-4">Rent!</a></li>
 			</ul>
 		</div>
 	</div>
