Implemented page.php & page.html

--- a/template/default/page.html
+++ b/template/default/page.html
@@ -1,5 +1,5 @@
 <!--{include:header.html}-->
 <div id="content" class="page margin-width clear-fix">
-This is a page
+${nl2br(htmlspecialchars($page['content']))}
 </div>
 <!--{include:footer.html}-->
