Change server engine  to server platform

--- a/template/default/admin/index-home.html
+++ b/template/default/admin/index-home.html
@@ -6,8 +6,8 @@
 		<ul class="clear-fix">
 			<li class="label">Server Time</li>
 			<li class="text">{$info['server']['time']}</li>
-			<li class="label">Server Engine</li>
-			<li class="text">{$_SERVER['SERVER_SOFTWARE']}</li>
+			<li class="label">Server Platform</li>
+			<li class="text">${PHP_OS}</li>
 		</ul>
 		<ul class="clear-fix">
 			<li class="label">SQL Version</li>
